[package]
name = "knox-core"
version = "0.1.0"
edition = "2021"
authors = ["Knox Security"]
description = "High-performance security scanning core for Knox"

[lib]
name = "knox_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.10"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.20", features = ["extension-module"] }
walkdir = "2.4"
memmap2 = "0.9"
aho-corasick = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
